Fix weird gap with some titles in code blocks when they are in an admonition

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -195,9 +195,10 @@ img {
   @apply !mb-5;
 }
 
-.alert div:first-child {
-  @apply mb-3;
-}
+/*.alert div:first-child {*/
+/*  @apply mb-3;*/
+/*}*/
+
 .boderRadius0 {
   border-radius: 0px !important;
 }
